Enable recording of statistics for the headlines cache

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ micronaut:
     port: 8081
   caches:
     headlines:
+      record-stats: true
       maximumSize: 20
       charset: UTF-8
       heap:
